--- a/css/styles.css
+++ b/css/styles.css
@@ -173,12 +173,13 @@ POKEMON SEARCH SECTION
 
 .stats {
     display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 40px;
 }
 
 .stats__item {
     margin-top: 25px;
     margin-right: 30px;
-    margin-bottom: 40px;
     text-align: center;
 }
 
@@ -251,5 +252,6 @@ FOOTER
     .pokemon {
         margin-top: 80px;
         width: 100%;
+        padding: 35px;
     }
 }
